Bug 237094 [W] UMC: Uninitialized memory copy in nsLocalFile::nsLocalFile(nsLocalFile const&) {1 occurrence} r=dougt